--- a/Test/Readme
+++ b/Test/Readme
@@ -1,1 +1,3 @@
-This folder includes test pickles to use in the IMU
+Test pickle can be found at the following link:
+
+https://fromsmash.com/Test-pickle-1
